added edit button feature

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,25 @@ input[type="text"]:focus {
   outline: none;
 }
 
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #d7d7d7;
+  list-style-type: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-group {
+  display: flex;
+  gap: 10px;
+}
+
+li:hover {
+  background-color: #ededed;
+}
+
 .btn {
   padding: 10px 20px;
   font-size: 16px;
@@ -52,20 +71,6 @@ input[type="text"]:focus {
   background-color: #4a747f;
 }
 
-li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #d7d7d7;
-  list-style-type: none; /* Remove default bullet points */
-  transition: background-color 0.3s ease;
-}
-
-li:hover {
-  background-color: #ededed;
-}
-
 label {
   display: flex;
   align-items: center;
@@ -78,7 +83,7 @@ input[type="checkbox"] {
 }
 
 .btn-delete {
-  background-color: #a90e0e;
+  background-color: #d75b5b;
   color: white;
   border: none;
   padding: 6px 12px;
@@ -87,15 +92,55 @@ input[type="checkbox"] {
   transition: background-color 0.3s ease;
 }
 
+.btn-edit {
+  background-color: #a5c7d1;
+}
+
+.btn-edit:hover {
+  background-color: #6ca2b2;
+}
+.group-edit {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.group-edit input {
+  width: 305px;
+}
+
+.btn-group-edit {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .btn-delete:hover {
-  background-color: #920303;
+  background-color: #ad3c3c;
+}
+
+.btn-save {
+  background-color: #a5c7d1;
+  color: white;
+}
+
+.btn-save:hover {
+  background-color: #6ca2b2;
+}
+
+.btn-cancel {
+  background-color: #d75b5b;
+  color: white;
+}
+
+.btn-cancel:hover {
+  background-color: #ad3c3c;
 }
 
 .todo-list {
   margin: 20px auto;
   padding: 20px 10px;
   max-width: 500px;
-  background-color: #b7b7b7;
+  background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
